crates/parser/tests/snapshots/test_class__aggregation_kinds.snap
---
source: crates/parser/tests/test_class.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Class(
                    ClassDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 7,
                                    end_line: 2,
                                    end_column: 8,
                                },
                            },
                        ),
                        name: "AggTest",
                        type_parameters: [],
                        super_types: [],
                        properties: [
                            Property {
                                name: "sharedProp",
                                type_ref: Type(
                                    TypeReference {
                                        package: None,
                                        name: "String",
                                        type_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 26,
                                            end_line: 4,
                                            end_column: 31,
                                        },
                                    },
                                ),
                                multiplicity: ZeroOrMany,
                                aggregation: Some(
                                    Shared,
                                ),
                                default_value: None,
                                stereotypes: [],
                                tagged_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 14,
                                    end_line: 4,
                                    end_column: 23,
                                },
                            },
                            Property {
                                name: "compositeProp",
                                type_ref: Type(
                                    TypeReference {
                                        package: None,
                                        name: "Integer",
                                        type_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 5,
                                            start_column: 32,
                                            end_line: 5,
                                            end_column: 38,
                                        },
                                    },
                                ),
                                multiplicity: PureOne,
                                aggregation: Some(
                                    Composite,
                                ),
                                default_value: None,
                                stereotypes: [],
                                tagged_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 5,
                                    start_column: 17,
                                    end_line: 5,
                                    end_column: 29,
                                },
                            },
                            Property {
                                name: "noneProp",
                                type_ref: Type(
                                    TypeReference {
                                        package: None,
                                        name: "Boolean",
                                        type_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 6,
                                            start_column: 22,
                                            end_line: 6,
                                            end_column: 28,
                                        },
                                    },
                                ),
                                multiplicity: ZeroOrOne,
                                aggregation: Some(
                                    None,
                                ),
                                default_value: None,
                                stereotypes: [],
                                tagged_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 6,
                                    start_column: 12,
                                    end_line: 6,
                                    end_column: 19,
                                },
                            },
                        ],
                        qualified_properties: [],
                        constraints: [],
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 5,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
